<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.voterInfo.election.name}" />

        <!-- Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            style="@style/textBoxContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:visibility="@{viewModel.voterInfo.election.electionDay == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="@{viewModel.voterInfo.election.electionDay.toString()}" />

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            style="@style/textBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:text="@string/state_info"
            android:visibility="@{(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl == null &amp;&amp; viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl == null ) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- Add click binding to open web URL -->
        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            style="@style/textBoxContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:onClick="@{()->viewModel.setUrl(viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            android:visibility="@{(viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl == null) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- Add click binding to open web URL -->
        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/textBoxContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:onClick="@{()->viewModel.setUrl(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl)}"
            android:text="@string/ballot_information"
            android:visibility="@{(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl == null) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/textBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:text="@string/address"
            android:visibility="@{(viewModel.voterInfo.state[0].electionAdministrationBody.correspondenceAddress == null) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- Add data binding -->
        <TextView
            android:id="@+id/address"
            style="@style/textBoxContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:text="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            android:visibility="@{(viewModel.voterInfo.state[0].electionAdministrationBody.correspondenceAddress == null) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <!-- Add button to save election to Room -->

        <Button
            android:id="@+id/followButton"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.onFollowButtonClick()}"
            android:text="@{viewModel.isElectionFollowed ? @string/unfollow_election : @string/follow_election}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>